--- a/app/src/main/res/layout/activity_simple_dht_main.xml
+++ b/app/src/main/res/layout/activity_simple_dht_main.xml
@@ -3,6 +3,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SimpleDhtActivity" >
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:hint="Write Message"
+        android:maxLines="5" >
+
+        <requestFocus />
+    </EditText>
+
+
+
+    <Button
+        android:id="@+id/button4"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="Insert" />
 
     <Button
         android:id="@+id/button1"
